# wavtool

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/cli/: main.cpp
include/wavtool/: App.h  AudioClip.h  AudioProcessor.h  Project.h  Renderer.h  WavFile.h  WaveformGenerator.h
src/: App.cpp  AudioClip.cpp  AudioProcessor.cpp  Project.cpp  Renderer.cpp  WavFile.cpp  WaveformGenerator.cpp
tests/: AppTests.cpp  AudioClipTests.cpp  AudioProcessorTests.cpp  ProjectTests.cpp  RendererTests.cpp  WavFileTests.cpp  WaveformGeneratorTests.cpp
